Fixed mobile menu visibility

--- a/style.css
+++ b/style.css
@@ -978,7 +978,7 @@ body.dark-mode .header {
         top: 80px;
         right: -100%;
         flex-direction: column;
-        background-color: var(--surface-color);
+        background-color: #000000;
         width: 100%;
         height: calc(100vh - 80px);
         padding: 40px;
